Added all of the textures and tools.

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,4 +39,4 @@ mod_group_id=com.confusingfool
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Eden Urias (ConfusingFool93, ConfusedFool93, AvacadoWizard120)
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Have you ever been tired of crafting new diamond tools when one breaks? Well, now you can give your diamond tools an upgrade with molten obsidian!\n\nNow you can blast obsidian in a blast furnace to get Molten Obsidian, use the Molten Obsidian in a Smithing Table with your diamond tool and you get a Molten Obsidian tool!\n\nYou can now also reinforce your netherite tools!\nCheck JEI for recipes.
+mod_description=Have you ever been tired of crafting new diamond tools when one breaks? Well, now you can give your diamond tools an upgrade with molten obsidian!\n\nNow you can blast obsidian in a blast furnace to get Molten Obsidian, use the Molten Obsidian in a Smithing Table with your diamond tool, and you get a Molten Obsidian tool!\n\nYou can now also reinforce your netherite tools!\nCheck JEI for recipes.
