--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,34 @@ run/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+/runs/client/saves/New World/playerdata/380df991-f603-344c-a090-369bad2a924a.dat
+/runs/client/saves/New World/playerdata/380df991-f603-344c-a090-369bad2a924a.dat_old
+/runs/client/saves/New World/advancements/380df991-f603-344c-a090-369bad2a924a.json
+/runs/client/saves/New World/stats/380df991-f603-344c-a090-369bad2a924a.json
+/runs/client/logs/2024-04-10-3.log.gz
+/runs/client/logs/debug-3.log.gz
+/runs/client/saves/New World/icon.png
+/runs/client/saves/New World/level.dat
+/runs/client/saves/New World/level.dat_old
+/runs/client/config/neoforge-client.toml
+/runs/client/config/neoforge-server.toml
+/runs/client/saves/New World/data/neoforge_data_attachments.dat
+/runs/client/saves/New World/DIM1/data/neoforge_data_attachments.dat
+/runs/client/saves/New World/DIM-1/data/neoforge_data_attachments.dat
+/runs/client/options.txt
+/runs/client/saves/New World/entities/r.0.0.mca
+/runs/client/saves/New World/region/r.0.0.mca
+/runs/client/saves/New World/entities/r.0.-1.mca
+/runs/client/saves/New World/region/r.0.-1.mca
+/runs/client/saves/New World/entities/r.-1.0.mca
+/runs/client/saves/New World/poi/r.-1.0.mca
+/runs/client/saves/New World/region/r.-1.0.mca
+/runs/client/saves/New World/entities/r.-1.-1.mca
+/runs/client/saves/New World/region/r.-1.-1.mca
+/runs/client/saves/New World/data/raids.dat
+/runs/client/saves/New World/DIM-1/data/raids.dat
+/runs/client/saves/New World/DIM1/data/raids_end.dat
+/runs/client/saves/New World/serverconfig/readme.txt
+/runs/client/saves/New World/session.lock
+/runs/client/usercache.json
+/runs/client/usernamecache.json
